Initialised tp-création-site-pas-a-pas

--- a/test/structure.html
+++ b/test/structure.html
@@ -28,8 +28,10 @@
 			</article>
 		</section>
 		<footer>
-			<p>Copyright Zozor - Tous droits réservés<br />
-			<a href="#">Me contacter !</a></p>
+			<p>
+				Copyright Zozor - Tous droits réservés<br />
+				<a href="#">Me contacter !</a>
+			</p>
 		</footer>
 	</body>
 </html>
