Filled Html, started CSS

--- a/tp-creation-d-un-site-pas-a-pas/index.html
+++ b/tp-creation-d-un-site-pas-a-pas/index.html
@@ -6,31 +6,113 @@
 		<title>Zozor - Carnets de voyage</title>
 	</head>
 	<body>
-		<header>
-			<h1></h1>
-		</header>
-		<nav>
-			<ul>
-				<li><a href="#">Accueil</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">CV</a></li>
-			</ul>
-		</nav>
-		<section>
-			<aside>
-				<h1></h1>
-				<p></p>
-			</aside>
-			<article>
-				<h1></h1>
-				<p></p>
-			</article>
-		</section>
-		<footer>
-			<p>
-				<br />
-				<a href="#"></a>
-			</p>
-		</footer>
+		<div class="contenu-page">
+			<header>
+				<div class="entete">
+					<img src="images/zozor_logo.png" alt="Logo Zozor" />
+					<h1>Zozor</h1>
+					<p>
+						Carnet de voyage
+					</p>
+				</div>
+				<nav>
+					<ul>
+						<li><a href="#">Accueil</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">CV</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
+			<div class="separateur-header">
+				<img src="images/separateur.png" alt="Séparateur" />
+			</div>
+			<section class="diaporama">
+				<div class="infos-diapo">
+					<p class="texte-diapo">
+						Retour sur mes vacances aux Etats-Unis...
+					</p>
+					<p class="bouton-diapo">
+						<a href="#">Voir l'article <img src="images/flecheblanchedroite.png" alt="Fleche blanche"></a>
+					</p>
+				</div>
+			</section>
+			<section>
+				<article>
+					<img src="images/ico_epingle.png" alt="Icone Epingle" class="img-titre-article" />
+					<h1 class="titre-article">Je suis un grand voyageur</h1>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quod ducimus debitis maiores, voluptatem architecto optio? Possimus, dolorem, culpa vero, quae nisi suscipit assumenda nihil, iure similique sit enim. Quidem obcaecati cumque commodi minus recusandae beatae nostrum labore ipsum assumenda neque enim corporis, eius dolorum magnam impedit reprehenderit doloribus, nihil odit! Consectetur illo facilis quasi, culpa rem accusantium similique id ipsa vero asperiores, quia totam odit nostrum, voluptatem, fugit nam eaque velit ad! Et a illum maiores quos harum, eum dolor, vitae alias recusandae aliquam explicabo nam consectetur impedit ea similique minima. Architecto quibusdam eligendi, laborum iste vitae veniam mollitia?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit cupiditate consequuntur adipisci sapiente voluptatem harum, debitis cumque perspiciatis fugiat quisquam aut autem porro quaerat nulla accusamus cum. Molestiae nisi ex earum cumque, sed minima consequatur excepturi quo harum quae quaerat, nostrum. Inventore repudiandae magni, sit eos sint, ex natus at, alias quae laudantium quaerat omnis ratione minus eaque hic. Beatae mollitia, molestiae laborum est in nulla dignissimos nisi esse ad numquam quae eos sunt, maxime eum nam nesciunt ipsum quia, dolore. Sed, aperiam optio earum enim distinctio perferendis velit, veritatis recusandae iusto odio blanditiis vero cupiditate corrupti libero voluptatum, similique. Quam molestias, esse illo eum quo reiciendis, maiores ducimus unde, asperiores quisquam repellendus nulla autem omnis laudantium aspernatur possimus suscipit, laboriosam ipsam! Provident illum molestiae eaque fuga vel, laborum autem, sint nihil illo maiores, vitae et! Alias vitae repellat nostrum aperiam totam aliquam accusamus delectus inventore, minus, fugiat laborum nihil.
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam accusamus libero excepturi laboriosam voluptate reprehenderit adipisci repellendus eos. Repellat placeat quibusdam quae voluptas, optio blanditiis? Dolore facere tempore iure optio voluptate modi quod aliquid repellat vero natus, hic! Officia aspernatur voluptate, ab illum, deleniti sapiente officiis! Molestias nisi eveniet pariatur quibusdam reiciendis corporis rerum eaque facilis minima, animi odio aliquam excepturi eos enim culpa voluptatum vitae cum reprehenderit nemo obcaecati, deleniti numquam placeat accusantium dignissimos.
+					</p>
+				</article>
+				<aside>
+					<div class="bulle-auteur">
+						<h1 class="titre-auteur">À propos de l'auteur</h1>
+						<img src="images/zozor_classe.png" alt="Photo de Zozor" class="img-auteur /">
+						<p class="infos-auteur">
+							Laisse-moi le temps de me présenter : je m'appelle Zozor, je suis né un 23 Novembre 2005.
+						</p>
+						<p class="infos-auteur">
+							Bien maigre, n'est-ce pas? C'est pourquoi, aujourd'hui, j'ai décidé d'écrire ma biographie (ou zBiographie, comme vous voulez !) afin que les zéros sachent enfin qui je suis réellement.
+						</p>
+						<p>
+							<img src="images/facebook.png" alt="Logo Facebook" />
+							<img src="images/twitter.png" alt="Logo Twitter" />
+							<img src="images/vimeo.png" alt="Logo Vimeo" />
+							<img src="images/flickr.png" alt="Logo Flickr" />
+							<img src="images/rss.png" alt="Logo RSS" />
+						</p>
+					</div>
+					<div class="fleche-bulle-auteur">
+					</div>
+				</aside>
+			</section>
+			<div class="separateur-footer">
+				<img src="images/separateur.png" alt="Séparateur" />
+				<img src="images/ico_top.png" alt="Séparateur" />
+				<img src="images/separateur.png" alt="Séparateur" />
+			</div>
+			<footer>
+				<div class="mon-dernier-tweet">
+					<h1>Mon Dernier Tweet</h1>
+					<p>Hii haaaaaan !</p>
+					<p>Le 12 mai à 23h12</p>
+				</div>
+				<div class="mes-photos">
+					<h1>Mes Photos</h1>
+					<p>
+						<img src="images/photo1.jpg" alt="Photo 1" />
+						<img src="images/photo2.jpg" alt="Photo 2" />
+						<img src="images/photo3.jpg" alt="Photo 3" />
+						<img src="images/photo4.jpg" alt="Photo 4" />
+					</p>
+				</div>
+				<div class="mes-amis">
+					<h1>Mes Amis</h1>
+					<div class="liens-externes">
+						<ul>
+							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Pupi le lapin</li>
+							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Mr Baobab</li>
+							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Kalwall</li>
+							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Perceval.eu</li>
+						</ul>
+					</div>
+					<div class="liens-externes">
+						<ul>
+							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Belette</li>
+							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Le concombre masqué</li>
+							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Ptit prince</li>
+							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Mr Fan</li>
+						</ul>
+					</div>
+				</div>
+			</footer>
+		</div>
 	</body>
 </html>
