--- a/tp-creation-d-un-site-pas-a-pas/index.html
+++ b/tp-creation-d-un-site-pas-a-pas/index.html
@@ -12,7 +12,7 @@
 					<img src="images/zozor_logo.png" alt="Logo Zozor" />
 					<h1>Zozor</h1>
 					<p>
-						Carnet de voyage
+						Carnets de voyage
 					</p>
 				</div>
 				<nav>
@@ -24,50 +24,48 @@
 					</ul>
 				</nav>
 			</header>
-			<div class="separateur-header">
-				<img src="images/separateur.png" alt="Séparateur" />
-			</div>
-			<section class="diaporama">
-				<div class="infos-diapo">
-					<p class="texte-diapo">
+			<div class="separateur-header"></div>
+			<div class="diaporama">
+				<div class="legende-diapo">
+					<div class="texte-diapo">
 						Retour sur mes vacances aux Etats-Unis...
-					</p>
-					<p class="bouton-diapo">
+					</div>
+					<div class="bouton-diapo">
 						<a href="#">Voir l'article <img src="images/flecheblanchedroite.png" alt="Fleche blanche"></a>
-					</p>
+					</div>
 				</div>
-			</section>
-			<section>
+			</div>
+			<section class="section">
 				<article>
-					<img src="images/ico_epingle.png" alt="Icone Epingle" class="img-titre-article" />
-					<h1 class="titre-article">Je suis un grand voyageur</h1>
+					<div class="section-header">
+						<img src="images/ico_epingle.png" alt="Icone Epingle" />
+						<h1>Je suis un grand voyageur</h1>
+					</div>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quod ducimus debitis maiores, voluptatem architecto optio? Possimus, dolorem, culpa vero, quae nisi suscipit assumenda nihil, iure similique sit enim. Quidem obcaecati cumque commodi minus recusandae beatae nostrum labore ipsum assumenda neque enim corporis, eius dolorum magnam impedit reprehenderit doloribus, nihil odit! Consectetur illo facilis quasi, culpa rem accusantium similique id ipsa vero asperiores, quia totam odit nostrum, voluptatem, fugit nam eaque velit ad! Et a illum maiores quos harum, eum dolor, vitae alias recusandae aliquam explicabo nam consectetur impedit ea similique minima. Architecto quibusdam eligendi, laborum iste vitae veniam mollitia?
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dolorum, ut ratione porro veritatis nisi sed vero labore mollitia incidunt odit voluptates, veniam nesciunt debitis asperiores, voluptate iure ea quia repellat optio cumque omnis. Perferendis, nemo molestias nostrum magnam, facere voluptates doloremque reiciendis assumenda quo mollitia quae quos error illum quidem repellat dolorum pariatur explicabo nisi! Ex, iusto, itaque. Cum modi expedita porro sit magni autem nihil quos illo voluptates nostrum, deserunt repellat consectetur vitae totam hic ipsa pariatur quod.
 					</p>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit cupiditate consequuntur adipisci sapiente voluptatem harum, debitis cumque perspiciatis fugiat quisquam aut autem porro quaerat nulla accusamus cum. Molestiae nisi ex earum cumque, sed minima consequatur excepturi quo harum quae quaerat, nostrum. Inventore repudiandae magni, sit eos sint, ex natus at, alias quae laudantium quaerat omnis ratione minus eaque hic. Beatae mollitia, molestiae laborum est in nulla dignissimos nisi esse ad numquam quae eos sunt, maxime eum nam nesciunt ipsum quia, dolore. Sed, aperiam optio earum enim distinctio perferendis velit, veritatis recusandae iusto odio blanditiis vero cupiditate corrupti libero voluptatum, similique. Quam molestias, esse illo eum quo reiciendis, maiores ducimus unde, asperiores quisquam repellendus nulla autem omnis laudantium aspernatur possimus suscipit, laboriosam ipsam! Provident illum molestiae eaque fuga vel, laborum autem, sint nihil illo maiores, vitae et! Alias vitae repellat nostrum aperiam totam aliquam accusamus delectus inventore, minus, fugiat laborum nihil.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae voluptas labore sit nihil dolores praesentium officiis illo, fugiat, ullam explicabo eveniet a aperiam tempore, porro quo nostrum et fuga molestias illum. Nulla facere autem ab eveniet consectetur earum, inventore aspernatur hic blanditiis, reprehenderit dolores. Quisquam deserunt assumenda molestias ut est obcaecati repudiandae sequi suscipit voluptates fuga tempore quo ipsa at quam nulla ab veniam magnam beatae, quis sint nesciunt voluptas, nemo optio! Dolorem non, aliquam unde hic omnis, velit debitis perspiciatis qui doloribus quasi est soluta maiores illo placeat veniam, labore iusto incidunt delectus asperiores quas ullam voluptate at sunt.
 					</p>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam accusamus libero excepturi laboriosam voluptate reprehenderit adipisci repellendus eos. Repellat placeat quibusdam quae voluptas, optio blanditiis? Dolore facere tempore iure optio voluptate modi quod aliquid repellat vero natus, hic! Officia aspernatur voluptate, ab illum, deleniti sapiente officiis! Molestias nisi eveniet pariatur quibusdam reiciendis corporis rerum eaque facilis minima, animi odio aliquam excepturi eos enim culpa voluptatum vitae cum reprehenderit nemo obcaecati, deleniti numquam placeat accusantium dignissimos.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo necessitatibus ea facilis, provident nobis beatae accusamus a quo? Aspernatur excepturi unde explicabo vero minus, ad. Et voluptates ipsa facilis in perferendis iste quasi, assumenda atque dolorem harum odio neque. Dolor quos, voluptas reprehenderit. Voluptatibus magnam et at officia, qui voluptatum quod eveniet, laborum eligendi mollitia labore optio excepturi, possimus iure quisquam consectetur ad! Fugiat sunt autem perferendis possimus, ipsam recusandae corporis fuga. Nemo quaerat debitis officia expedita ipsa delectus sapiente.
 					</p>
 				</article>
-				<aside>
-					<div class="bulle-auteur">
-						<h1 class="titre-auteur">À propos de l'auteur</h1>
-						<img src="images/zozor_classe.png" alt="Photo de Zozor" class="img-auteur /">
-						<p class="infos-auteur">
-							Laisse-moi le temps de me présenter : je m'appelle Zozor, je suis né un 23 Novembre 2005.
-						</p>
-						<p class="infos-auteur">
-							Bien maigre, n'est-ce pas? C'est pourquoi, aujourd'hui, j'ai décidé d'écrire ma biographie (ou zBiographie, comme vous voulez !) afin que les zéros sachent enfin qui je suis réellement.
-						</p>
-						<p>
-							<img src="images/facebook.png" alt="Logo Facebook" />
-							<img src="images/twitter.png" alt="Logo Twitter" />
-							<img src="images/vimeo.png" alt="Logo Vimeo" />
-							<img src="images/flickr.png" alt="Logo Flickr" />
-							<img src="images/rss.png" alt="Logo RSS" />
-						</p>
+				<aside class="bulle-auteur">
+					<h1 class="titre-auteur">À propos de l'auteur</h1>
+					<img src="images/zozor_classe.png" alt="Photo de Zozor" class="img-auteur /">
+					<p class="infos-auteur">
+						Laisse-moi le temps de me présenter : je m'appelle Zozor, je suis né un 23 Novembre 2005.
+					</p>
+					<p class="infos-auteur">
+						Bien maigre, n'est-ce pas? C'est pourquoi, aujourd'hui, j'ai décidé d'écrire ma biographie (ou zBiographie, comme vous voulez !) afin que les zéros sachent enfin qui je suis réellement.
+					</p>
+					<div class="reseaux-sociaux">
+						<img src="images/facebook.png" alt="Logo Facebook" />
+						<img src="images/twitter.png" alt="Logo Twitter" />
+						<img src="images/vimeo.png" alt="Logo Vimeo" />
+						<img src="images/flickr.png" alt="Logo Flickr" />
+						<img src="images/rss.png" alt="Logo RSS" />
 					</div>
 					<div class="fleche-bulle-auteur">
 					</div>
