--- a/tp-creation-d-un-site-pas-a-pas/index.html
+++ b/tp-creation-d-un-site-pas-a-pas/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.css" />
 		<title>Zozor - Carnets de voyage</title>
 	</head>
 	<body>
-		<div class="contenu-page">
+		<div id="bloc_page">
 			<header>
-				<div class="entete">
-					<img src="images/zozor_logo.png" alt="Logo Zozor" />
-					<h1>Zozor</h1>
-					<p>
-						Carnets de voyage
-					</p>
+				<div id="titre_principal">
+					<div id="logo">
+						<img src="images/zozor_logo.png" alt="Logo de Zozor" />
+						<h1>Zozor</h1>
+					</div>
+					<h2>Carnets de voyage</h2>
 				</div>
 				<nav>
 					<ul>
@@ -24,89 +24,79 @@
 					</ul>
 				</nav>
 			</header>
-			<div class="separateur-header"></div>
-			<div class="diaporama">
-				<div class="legende-diapo">
-					<div class="texte-diapo">
-						Retour sur mes vacances aux Etats-Unis...
-					</div>
-					<div class="bouton-diapo">
-						<a href="#">Voir l'article <img src="images/flecheblanchedroite.png" alt="Fleche blanche"></a>
-					</div>
+			<div id="banniere_image">
+				<div id="banniere_description">
+					Retour sur mes vacances aux États-Unis...
+					<a href="#" class="bouton_rouge">Voir l'article <img src="images/flecheblanchedroite.png" alt="Fleche Blanche Droite" /></a>
 				</div>
 			</div>
-			<section class="section">
+			<section>
 				<article>
-					<div class="section-header">
-						<img src="images/ico_epingle.png" alt="Icone Epingle" />
-						<h1>Je suis un grand voyageur</h1>
-					</div>
+					<h1><img src="images/ico_epingle.png" alt="Catégorie voyage" class="ico_categorie" />Je suis un grand voyageur</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dolorum, ut ratione porro veritatis nisi sed vero labore mollitia incidunt odit voluptates, veniam nesciunt debitis asperiores, voluptate iure ea quia repellat optio cumque omnis. Perferendis, nemo molestias nostrum magnam, facere voluptates doloremque reiciendis assumenda quo mollitia quae quos error illum quidem repellat dolorum pariatur explicabo nisi! Ex, iusto, itaque. Cum modi expedita porro sit magni autem nihil quos illo voluptates nostrum, deserunt repellat consectetur vitae totam hic ipsa pariatur quod.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec sagittis massa. Nulla facilisi. Cras id arcu lorem, et semper purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis vel enim mi, in lobortis sem. Vestibulum luctus elit eu libero ultrices id fermentum sem sagittis. Nulla imperdiet mauris sed sapien dignissim id aliquam est aliquam. Maecenas non odio ipsum, a elementum nisi. Mauris non erat eu erat placerat convallis. Mauris in pretium urna. Cras laoreet molestie odio, consequat consequat velit commodo eu. Integer vitae lectus ac nunc posuere pellentesque non at eros. Suspendisse non lectus lorem.
 					</p>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae voluptas labore sit nihil dolores praesentium officiis illo, fugiat, ullam explicabo eveniet a aperiam tempore, porro quo nostrum et fuga molestias illum. Nulla facere autem ab eveniet consectetur earum, inventore aspernatur hic blanditiis, reprehenderit dolores. Quisquam deserunt assumenda molestias ut est obcaecati repudiandae sequi suscipit voluptates fuga tempore quo ipsa at quam nulla ab veniam magnam beatae, quis sint nesciunt voluptas, nemo optio! Dolorem non, aliquam unde hic omnis, velit debitis perspiciatis qui doloribus quasi est soluta maiores illo placeat veniam, labore iusto incidunt delectus asperiores quas ullam voluptate at sunt.
+						Vivamus sed libero nec mauris pulvinar facilisis ut non sem. Quisque mollis ullamcorper diam vel faucibus. Vestibulum sollicitudin facilisis feugiat. Nulla euismod sodales hendrerit. Donec quis orci arcu. Vivamus fermentum magna a erat ullamcorper dignissim pretium nunc aliquam. Aenean pulvinar condimentum enim a dignissim. Vivamus sit amet lectus at ante adipiscing adipiscing eget vitae felis. In at fringilla est. Cras id velit ut magna rutrum commodo. Etiam ut scelerisque purus. Duis risus elit, venenatis vel rutrum in, imperdiet in quam. Sed vestibulum, libero ut bibendum consectetur, eros ipsum ultrices nisl, in rutrum diam augue non tortor. Fusce nec massa et risus dapibus aliquam vitae nec diam.
 					</p>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo necessitatibus ea facilis, provident nobis beatae accusamus a quo? Aspernatur excepturi unde explicabo vero minus, ad. Et voluptates ipsa facilis in perferendis iste quasi, assumenda atque dolorem harum odio neque. Dolor quos, voluptas reprehenderit. Voluptatibus magnam et at officia, qui voluptatum quod eveniet, laborum eligendi mollitia labore optio excepturi, possimus iure quisquam consectetur ad! Fugiat sunt autem perferendis possimus, ipsam recusandae corporis fuga. Nemo quaerat debitis officia expedita ipsa delectus sapiente.
+						Phasellus ligula massa, congue ac vulputate non, dignissim at augue. Sed auctor fringilla quam quis porttitor. Praesent vitae dignissim magna. Pellentesque quis sem purus, vel elementum mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas consectetur euismod urna. In hac habitasse platea dictumst. Quisque tincidunt porttitor vestibulum. Ut iaculis, lacus at molestie lacinia, ipsum mi adipiscing ligula, vel mollis sem risus eu lectus. Nunc elit quam, rutrum ut dignissim sit amet, egestas at sem.
 					</p>
 				</article>
-				<aside class="bulle-auteur">
-					<h1 class="titre-auteur">À propos de l'auteur</h1>
-					<img src="images/zozor_classe.png" alt="Photo de Zozor" class="img-auteur /">
-					<p class="infos-auteur">
-						Laisse-moi le temps de me présenter : je m'appelle Zozor, je suis né un 23 Novembre 2005.
+				<aside>
+					<h1>À propos de l'auteur</h1>
+					<img src="images/bulle.png" alt="" id="fleche_bulle" />
+					<p id="photo_zozor">
+						<img src="images/zozor_classe.png" alt="Photo de Zozor" />
 					</p>
-					<p class="infos-auteur">
-						Bien maigre, n'est-ce pas? C'est pourquoi, aujourd'hui, j'ai décidé d'écrire ma biographie (ou zBiographie, comme vous voulez !) afin que les zéros sachent enfin qui je suis réellement.
+					<p>
+						Laisse-moi le temps de me présenter&nbsp;: je m'appelle Zozor, je suis né un 23 novembre 2005.
 					</p>
-					<div class="reseaux-sociaux">
-						<img src="images/facebook.png" alt="Logo Facebook" />
-						<img src="images/twitter.png" alt="Logo Twitter" />
-						<img src="images/vimeo.png" alt="Logo Vimeo" />
-						<img src="images/flickr.png" alt="Logo Flickr" />
-						<img src="images/rss.png" alt="Logo RSS" />
-					</div>
-					<div class="fleche-bulle-auteur">
-					</div>
+					<p>
+						Bien maigre, n'est-ce pas ? C'est pourquoi, aujourd'hui, j'ai décidé d'écrire ma biographie afin que vous sachiez qui je suis réellement.
+					</p>
+					<p id="reseaux-sociaux">
+						<img src="images/facebook.png" alt="Facebook" />
+						<img src="images/twitter.png" alt="Twitter" />
+						<img src="images/vimeo.png" alt="Vimeo" />
+						<img src="images/flickr.png" alt="Flickr" />
+						<img src="images/rss.png" alt="RSS" />
+					</p>
 				</aside>
 			</section>
-			<div class="separateur-footer">
-				<img src="images/separateur.png" alt="Séparateur" />
-				<img src="images/ico_top.png" alt="Séparateur" />
-				<img src="images/separateur.png" alt="Séparateur" />
-			</div>
 			<footer>
-				<div class="mon-dernier-tweet">
-					<h1>Mon Dernier Tweet</h1>
-					<p>Hii haaaaaan !</p>
-					<p>Le 12 mai à 23h12</p>
-				</div>
-				<div class="mes-photos">
-					<h1>Mes Photos</h1>
+				<div id="tweet">
+					<h1>Mon dernier tweet</h1>
 					<p>
-						<img src="images/photo1.jpg" alt="Photo 1" />
-						<img src="images/photo2.jpg" alt="Photo 2" />
-						<img src="images/photo3.jpg" alt="Photo 3" />
-						<img src="images/photo4.jpg" alt="Photo 4" />
+						Hii haaaaaan !
+					</p>
+					<p>
+						le 12 mai à 23h12
 					</p>
 				</div>
-				<div class="mes-amis">
-					<h1>Mes Amis</h1>
-					<div class="liens-externes">
+				<div id="mes_photos">
+					<h1>Mes photos</h1>
+					<p class="mes-photos">
+						<img src="images/photo1.jpg" alt="Photographie" />
+						<img src="images/photo2.jpg" alt="Photographie" />
+						<img src="images/photo3.jpg" alt="Photographie" />
+						<img src="images/photo4.jpg" alt="Photographie" />
+					</p>
+				</div>
+				<div id="mes_amis">
+					<h1>Mes amis</h1>
+					<div id="listes_amis">
 						<ul>
-							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Pupi le lapin</li>
-							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Mr Baobab</li>
-							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Kalwall</li>
-							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Perceval.eu</li>
+							<li><a href="#">Pupi le lapin</a></li>
+							<li><a href="#">Mr Baobab</a></li>
+							<li><a href="#">Kaiwaii</a></li>
+							<li><a href="#">Perceval.eu</a></li>
 						</ul>
-					</div>
-					<div class="liens-externes">
 						<ul>
-							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Belette</li>
-							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Le concombre masqué</li>
-							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Ptit prince</li>
-							<img src="images/ico_liensexternes.png" class="logo-liens-externes" /><li class="lien-externe">Mr Fan</li>
+							<li><a href="#">Belette</a></li>
+							<li><a href="#">Le concombre masqué</a></li>
+							<li><a href="#">Ptit prince</a></li>
+							<li><a href="#">Mr Fan</a></li>
 						</ul>
 					</div>
 				</div>
