Moved activity structurer-son-cv in his folder

--- a/activite-structurer-son-cv/mon-cv.html
+++ b/activite-structurer-son-cv/mon-cv.html
@@ -40,7 +40,7 @@
 		</p>
 		<h2>Ma formation</h2>
 		<p>
-			<mark>OpenClassrooms</mark>, <em>W3Schools</em> et <em>GrafikArt</em>.
+			OpenClassrooms, W3Schools et GrafikArt.
 		</p>
 	</body>
 </html>
