--- a/activite-mettre-en-forme-son-cv/mon-cv.html
+++ b/activite-mettre-en-forme-son-cv/mon-cv.html
@@ -20,7 +20,7 @@
 					<strong>De 1999 à 2011 :</strong> études primaires et secondaires au Collège Notre Dame du Liban (CNDL).
 				</li>
 				<li>
-					<strong>De 2011 à 2014 :</strong> Passage au Lycée Thierno Seydou Nourou Tall (LTSNT) et obtention de mo Baccalauréat (Série S2).
+					<strong>De 2011 à 2014 :</strong> Passage au Lycée Thierno Seydou Nourou Tall (LTSNT) et obtention de mon Baccalauréat (Série S2).
 				</li>
 				<li>
 					<strong>De 2014 à aujourd'hui :</strong> Etudes supérieures en DIC (Diplome d'Igénieur en Conception) en Informatique à l'<a href="http://www.esp.sn/" title="Aller sur le site de l'ESP">Ecole Supérieure Polytechnique (ESP)</a>.
