Re-structured the test folder

--- a/test/html/test.html
+++ b/test/html/test.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<figure>
-			<a href="orange.png"><img src="orange_mini.png" alt="Photo du logo de Orange" title="Orange TM" /></a>
+			<a href="images/orange.png"><img src="images/orange_mini.png" alt="Photo du logo de Orange" title="Orange TM" /></a>
 			<figcaption>Logo Orange</figcaption>
 		</figure>
 		<h1><em>HTML5</em> et <em>CSS3</em></h1>
