--- a/test/tableau/tableau.html
+++ b/test/tableau/tableau.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/tableau.css">
-		<title>Tableaux</title>
+		<title>Tableau</title>
 	</head>
 	<body>
 		<p></p>
